# NetJudge

./: .flake8  .gitignore  LICENSE.md  Pipfile  README.md  dodo.py  fac_idle.py  idle_test.py  mailer_utilities.py  mailer_utilities_old.py  main.py  pyproject.toml  setup.cfg  table_utilities.py  test.py  ya_idle.py  ya_parse.py
database/: __init__.py  __main__.py  data.db  functions.py  models.py  translator.py
docs/: conf.py  database.rst  email_helper.rst  index.rst  report_analyser.rst
docs/source/: conf.py  index.rst  license.rst  tech_docs.rst
email_helper/: __main__.py  data.php  deadlines.py  fac_idle.py  mailer_configs.py  mailer_utilities.py  pattern.html  pattern.php  report_fixer.py  table_utilities.py  ya_download.py  ya_download_new.py  ya_idle.py  ya_parse.py
input_example/: instruction.json  results.json
input_example/dima/: report.03.clone
input_example/veniamin/: report.03.base  report.03.bridge
netjudge/: .gitignore
netjudge/common/: configs.py  deadlines.py  logger.py  translator.py
netjudge/database/: __init__.py  __main__.py  common.py  functions.py  models.py
netjudge/email_helper/: __main__.py  data.php  deadlines.py  fac_idle.py  mailer_configs.py  mailer_utilities.py  pattern.php  report_fixer.py  table_utilities.py  ya_download.py  ya_idle.py  ya_parse.py
netjudge/po/ru/LC_MESSAGES/: netjudge.po
netjudge/report_analyser/: __main__.py  appcmd.py  translator.py
netjudge/web_server/: MyHTTPRequestHandler.py  __main__.py  data.html  index.html  page_generator.py
po/ru/LC_MESSAGES/: netjudge.po
regex_library/: example.json
report_analyser/: Machine_config.py  __main__.py  appcmd.py  main.py  output_translator.py  test_appcmd.py  translator.py
report_analyser/input_checker/: CONSTANTS.py  Machine_config.py  ip_parser.py
report_analyser/po/ru/LC_MESSAGES/: netjudge.po
tests/: test_appcmd.py
