[build-system]
requires = ["setuptools", "build", "wheel", "flake8", "pydocstyle", "babel", "doit", "bs4", "sqlalchemy", "imap_tools", "termcolor", "sphinx_mdinclude"]
build-backend = "setuptools.build_meta"

[project]
name = "NetJudge"
version = "1.2.0"
dependencies = ["bs4", "sqlalchemy", "imap_tools", "termcolor"]
dynamic = ["description", 'readme', "requires-python", "authors", "classifiers", "urls", "entry-points"]