[metadata]
name = NetJudge
version = 1.0.0
url = https://github.com/Veniamin-Arefev/NetJudge
author = Veniamin-Arefev,
author_email = veniamin.arefev@mail.ru
description = Net Judge is a check environment for Linux Network oriented courses
long_description = file: missing.rst
project_urls =
    Bug Tracker = https://www.github.com/Veniamin-Arefev/NetJudge/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = database, email_helper, report_analyser
python_requires = >=3.10
include_package_data = True
install_requires =
    bs4==0.0.1
    imap-tools>=0.55.0
    SQLAlchemy>=1.4.37
    termcolor>=1.1.0
    sphinx_mdinclude>=0.5.1


[options.entry_points]
console_scripts =
    netjudge-fac_idle = email_helper.fac_idle:fac_idle_main
    netjudge-ya_idle = email_helper.ya_idle:ya_idle_main
    netjudge-download = email_helper.ya_download:ya_download
    netjudge-ya_parse = email_helper.ya_parse:ya_parse_main
    netjudge-database = database.__main__:main
    netjudge-report_analyser = report_analyser.__main__:main


[options.package_data]
email_helper =
    *.php
report_analyser =
    po/*/*/*.mo

[pydocstyle]
inherit = false
ignore = D401, D203, D213, D415, D400
match = .*\.py

[flake8]
max-line-length = 120
# Enable under and over-indenting of continuations
ignore = E128, E117, E126, F405, F403, W504, W291, E731, F401, W293
# Prevent gettext _ from being reported as missing
builtins = _, ngettext