[metadata]
name = NetJudge
url = https://github.com/Veniamin-Arefev/NetJudge
author = Veniamin Arefev,Dmitry Stamplevsky, Okonishnikov Ariy
author_email = veniamin.arefev@mail.ru
description = Net Judge is a check environment for Linux Network oriented courses
long_description = file: README.md
project_urls =
    Bug Tracker = https://www.github.com/Veniamin-Arefev/NetJudge/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = netjudge.database, netjudge.email_helper, netjudge.report_analyser, netjudge.po
python_requires = >=3.8
include_package_data = True


[options.entry_points]
console_scripts =
    netjudge-fac_idle = netjudge.email_helper.fac_idle:fac_idle_main
    netjudge-ya_idle = netjudge.email_helper.ya_idle:ya_idle_main
    netjudge-download = netjudge.email_helper.ya_download:ya_download
    netjudge-ya_parse = netjudge.email_helper.ya_parse:ya_parse_main
    netjudge-database = netjudge.database.__main__:main
    netjudge-report_analyser = netjudge.report_analyser.__main__:main


[options.package_data]
docs = docs/*
examples = input_example/*
setup =
    pyproject.toml
    setup.cfg
dodo = dodo.py

[options.data_files]
php_pages = netjudge/email_helper/*.php
translations = netjudge/po/*/*/*.mo

[pydocstyle]
inherit = false
ignore = D401, D203, D213, D415, D400, D205
match = .*\.py


[flake8]
max-line-length = 120
ignore = E128, E117, E126, F405, F403, W504, W291, E731, F401, W293, E251, W605
builtins = _, ngettext